--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,10 +9,25 @@ environment:
   matrix:
     # FIXME:
     # * https://ci.appveyor.com/project/ingenue/hunter/build/1.0.1053/job/l4ud1nf8pbo11tkh
-    # - TOOLCHAIN: "default"
-    #   PROJECT_DIR: examples\hdf5
+     - TOOLCHAIN: "default"
+       PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "ninja-vs-17-2017-win64-cxx17"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "ninja-vs-17-2017-win64"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "ninja-vs-14-2015-win64"
+      PROJECT_DIR: examples\hdf5
 
     - TOOLCHAIN: "ninja-vs-12-2013-win64"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "nmake-vs-15-2017-win64-cxx17"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "nmake-vs-15-2017-win64"
       PROJECT_DIR: examples\hdf5
 
     - TOOLCHAIN: "nmake-vs-12-2013-win64"
@@ -38,8 +53,23 @@ environment:
 
     # FIXME:
     # * https://ci.appveyor.com/project/ingenue/hunter/build/1.0.1053/job/l4ud1nf8pbo11tkh
-    # - TOOLCHAIN: "vs-14-2015"
-    #   PROJECT_DIR: examples\hdf5
+    - TOOLCHAIN: "vs-14-2015"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-14-2015-win64"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-15-2017"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-15-2017-win64"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-16-2019"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-16-2019-win64"
+      PROJECT_DIR: examples\hdf5
 
     - TOOLCHAIN: "vs-9-2008"
       PROJECT_DIR: examples\hdf5
@@ -47,10 +77,16 @@ environment:
     - TOOLCHAIN: "mingw"
       PROJECT_DIR: examples\hdf5
 
+    - TOOLCHAIN: "mingw-cxx14"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "mingw-cxx17"
+      PROJECT_DIR: examples\hdf5
+
     # FIXME:
     # * https://ci.appveyor.com/project/ingenue/hunter/build/1.0.1053/job/mtnnis065ibe658y
-    # - TOOLCHAIN: "msys"
-    #   PROJECT_DIR: examples\hdf5
+     - TOOLCHAIN: "msys"
+       PROJECT_DIR: examples\hdf5
 
 install:
   # Python 3
