--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,30 +7,86 @@ environment:
       secure: LNJ5FPxb7CPXpslLdb63M1Z2344XY5kxQOsnE1RQ6O+hslNqTHk7pvbS+YB5+05P
 
   matrix:
+    # FIXME:
+    # * https://ci.appveyor.com/project/ingenue/hunter/build/1.0.1053/job/l4ud1nf8pbo11tkh
+    #- TOOLCHAIN: "default"
+    #  PROJECT_DIR: examples\hdf5
 
     - TOOLCHAIN: "ninja-vs-15-2017-win64-cxx17"
-      PROJECT_DIR: examples\foo
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "ninja-vs-15-2017-win64"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "ninja-vs-14-2015-win64"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "ninja-vs-12-2013-win64"
+      PROJECT_DIR: examples\hdf5
 
     - TOOLCHAIN: "nmake-vs-15-2017-win64-cxx17"
-      PROJECT_DIR: examples\foo
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      PROJECT_DIR: examples\hdf5
 
-    - TOOLCHAIN: "vs-15-2017-win64-cxx17"
-      PROJECT_DIR: examples\foo
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - TOOLCHAIN: "nmake-vs-15-2017-win64"
+      PROJECT_DIR: examples\hdf5
 
-    - TOOLCHAIN: "vs-14-2015-sdk-8-1"
-      PROJECT_DIR: examples\foo
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    - TOOLCHAIN: "nmake-vs-12-2013-win64"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "nmake-vs-12-2013"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-10-2010"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-11-2012"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-12-2013-win64"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-12-2013-xp"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-12-2013"
+      PROJECT_DIR: examples\hdf5
+
+    # FIXME:
+    # * https://ci.appveyor.com/project/ingenue/hunter/build/1.0.1053/job/l4ud1nf8pbo11tkh
+    - TOOLCHAIN: "vs-14-2015"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-14-2015-win64"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-15-2017"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-15-2017-win64"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-16-2019"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-16-2019-win64"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "vs-9-2008"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "mingw"
+      PROJECT_DIR: examples\hdf5
+
+    - TOOLCHAIN: "mingw-cxx14"
+      PROJECT_DIR: examples\hdf5
 
     - TOOLCHAIN: "mingw-cxx17"
-      PROJECT_DIR: examples\foo
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      PROJECT_DIR: examples\hdf5
 
-    - TOOLCHAIN: "msys-cxx17"
-      PROJECT_DIR: examples\foo
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    # FIXME:
+    # * https://ci.appveyor.com/project/ingenue/hunter/build/1.0.1053/job/mtnnis065ibe658y
+    - TOOLCHAIN: "msys"
+      PROJECT_DIR: examples\hdf5
 
 install:
   # Python 3
@@ -80,5 +136,3 @@ build_script:
 branches:
   except:
     - pkg.template
-    - /^pr\..*/
-    - /^v[0-9]+\.[0-9]+\.[0-9]+$/
