--- a/examples/hdf5/CMakeLists.txt
+++ b/examples/hdf5/CMakeLists.txt
@@ -9,6 +9,8 @@ include("../common.cmake")
 
 project(download-hdf5)
 
+hunter_add_package(ZLIB)
+hunter_add_package(szip)
 hunter_add_package(hdf5)
 
 find_package(ZLIB CONFIG REQUIRED)
@@ -16,4 +18,4 @@ find_package(szip CONFIG REQUIRED)
 find_package(hdf5 CONFIG REQUIRED)
 
 add_executable(foo h5_write.c)
-target_link_libraries(foo hdf5)
+target_link_libraries(foo hdf5::hdf5_hl-static hdf5::hdf5-static hdf5::hdf5_cpp-static)
